--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "babel-cli": "^6.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -27,7 +28,9 @@
     "test-storybook": "test-storybook",
     "watch:css": "npx tailwindcss -i ./src/index.css -o ./src/App.css ./src/components/tailwind.css --watch",
     "tailwind-refresh": "npx tailwindcss -i ./src/index.css -o ./src/App.css ./src/components/tailwind.css",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+    "delete-old": "del dist",
+    "publish:npm": "babel src/components -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
