--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "dev-components",
   "version": "0.1.0",
   "private": true,
+  "babel": {  
+    "presets": [  
+      "@babel/preset-react"   
+    ] 
+  }, 
+  "main": "dist/index.js",
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
